// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when logged in 1`] = `
<DocumentFragment>
  <div
    class="Homepage"
  >
    <div
      class="container text-center"
    >
      <h1
        class="mb-4 font-weight-bold"
      >
        nnTest
      </h1>
      <p
        class="lead"
      >
        nnTest is a way to test out LSTM structures on forecasting tasks.
      </p>
      <h2>
        Welcome Back, testfirst!
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div
    class="Homepage"
  >
    <div
      class="container text-center"
    >
      <h1
        class="mb-4 font-weight-bold"
      >
        nnTest
      </h1>
      <p
        class="lead"
      >
        nnTest is a way to test out LSTM structures on forecasting tasks.
      </p>
      <p>
        <a
          class="btn btn-primary font-weight-bold mr-3"
          href="/login"
        >
          Log in
        </a>
        <a
          class="btn btn-primary font-weight-bold"
          href="/signup"
        >
          Sign up
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;
